<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/small_padding"
    android:background="@color/standard_background"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_input_space"
        android:text="@string/card_information" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/edit_text_margin"
        android:drawablePadding="@dimen/drawable_padding"
        android:layout_alignParentTop="true"
        android:drawableLeft="@drawable/e_mail"
        android:inputType="textEmailAddress"
        style="@style/payment_input"
        android:singleLine="true"
        android:layout_height="wrap_content" android:hint="@string/email" />
    <EditText
        android:id="@+id/credit_card"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/edit_text_margin"
        android:drawablePadding="@dimen/drawable_padding"
        android:layout_below="@+id/email"
        android:drawableLeft="@drawable/creditcard"
        android:inputType="number"
        android:singleLine="true"
        style="@style/payment_input"
        android:layout_height="wrap_content" android:hint="@string/card_number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content" android:orientation="horizontal">

        <EditText
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginRight="40dp"
            android:inputType="none"
            android:drawablePadding="@dimen/drawable_padding"
            style="@style/payment_input"
            android:singleLine="true"
            android:drawableLeft="@drawable/calendar"
            android:hint="@string/date_hint" />

        <EditText
            android:id="@+id/cvc"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:inputType="number" android:maxLength="3"
            style="@style/payment_input"
            android:singleLine="true"
            android:layout_height="match_parent" android:hint="@string/cvc" />

    </LinearLayout>

    <include layout="@layout/price_view" android:layout_width="match_parent"
             android:layout_marginBottom="@dimen/big_padding"
                android:layout_height="wrap_content" />

    <Button
        android:id="@+id/pay_button"
        android:layout_width="match_parent"
        style="@style/green_button"
        android:layout_height="wrap_content" android:text="@string/pay" />

</LinearLayout>
