<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent" android:background="@color/standard_background"
    android:layout_height="match_parent" android:padding="@dimen/big_padding" android:gravity="center_horizontal" >

    <include layout="@layout/logo_view" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="match_parent" android:gravity="center_horizontal"
        android:layout_height="wrap_content" android:text="@string/home_title" android:layout_marginBottom="20dp" android:layout_marginTop="20dp" />

   <Button
       android:id="@+id/go_to_scan"
       android:layout_width="match_parent" style="@style/green_button"
       android:layout_height="wrap_content" android:text="@string/scan_input_button" android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/go_to_manual_input" style="@style/grey_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/manually_input_button" />

</LinearLayout>